<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent" android:layout_weight="1"
        android:layout_height="0dp"
        >

        <TextView
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/castle"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:text="  City Guide"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginRight="16dp"
            android:id="@+id/ivTwitter"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/ivTwitter"
            android:background="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent" android:layout_weight="1"
        android:layout_height="0dp" android:background="@color/black"
        >

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/travelAgency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginRight="16dp"
        android:layout_centerVertical="true"
        android:background="@drawable/arrow"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:columnCount="2"
        android:rowCount="3"
        android:background="@color/lightgray"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:layout_height="0dp">

        <!--Row I--> <!--Column-->

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            app:cardBackgroundColor="@color/pinkbg"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content" android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/airplane"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/airplane"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/orange"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/car"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="70dp"
                    android:layout_height="60dp" />

                <TextView
                    android:text="@string/car"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/blue"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/bus"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/cityBus"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/forestgreen"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/train"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/train"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/orange"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/tea"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/restro"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/pinkbg"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/hotel"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/hotel"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/maroon"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/wine"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/nightClub"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/blue"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/myplaces"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/places"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>